--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     plan: free
-    name: SPARROW-AUTO-FILTER
+    name: Afilter2
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python bot.py
